rust/macros/tests/invalid/target/debug/deps/no_comma-e618b29feb9cf971.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/no_comma-e618b29feb9cf971.d: no_comma.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libno_comma-e618b29feb9cf971.rmeta: no_comma.rs Cargo.toml

no_comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
